plugins/javaFX/testData/highlighting/multipleStylesheetsAttribute.fxml
<?import javafx.scene.layout.GridPane?>
<GridPane xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10"
          fx:id="myGridPane" stylesheets="@mystyle.css, @<error descr="Cannot resolve file 'unknown.css'">unknown.css</error>, @very/deeply/located/small.css">
</GridPane>